# assistant-backend

./: .env_example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  signature.json
app/: __init__.py  config.py
app/api/: getweather.py  orchestrator.py  routes.py
app/tools/: getdatetimetool.py  getweathertool.py  orchestrator.py  websearchtool.py
