[project]
name = "assistant-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-restful>=0.3.10",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "sympy>=1.14.0",
]
